# server/api/gen/go/admin/auth_http.pb.go
@@ -23,7 +23,6 @@ const _ = http.SupportPackageIsVersion1
 const OperationAuthServiceGetUserInfo = "/admin.AuthService/GetUserInfo"
 const OperationAuthServiceGetUserMenu = "/admin.AuthService/GetUserMenu"
 const OperationAuthServiceGetUserProfile = "/admin.AuthService/GetUserProfile"
-const OperationAuthServiceLogin = "/admin.AuthService/Login"
 const OperationAuthServiceSendUpdatePhoneCode = "/admin.AuthService/SendUpdatePhoneCode"
 const OperationAuthServiceUpdateUserPhone = "/admin.AuthService/UpdateUserPhone"
 const OperationAuthServiceUpdateUserProfile = "/admin.AuthService/UpdateUserProfile"
@@ -36,8 +35,6 @@ type AuthServiceHTTPServer interface {
 	GetUserMenu(context.Context, *emptypb.Empty) (*TreeRouteResponse, error)
 	// GetUserProfile 获取个人中心用户信息
 	GetUserProfile(context.Context, *emptypb.Empty) (*UserProfileForm, error)
-	// Login 登录
-	Login(context.Context, *LoginRequest) (*LoginResponse, error)
 	// SendUpdatePhoneCode 发送手机号验证码
 	SendUpdatePhoneCode(context.Context, *SendUpdatePhoneCodeForm) (*emptypb.Empty, error)
 	// UpdateUserPhone 修改个人中心手机号
@@ -50,7 +47,6 @@ type AuthServiceHTTPServer interface {
 
 func RegisterAuthServiceHTTPServer(s *http.Server, srv AuthServiceHTTPServer) {
 	r := s.Route("/")
-	r.POST("/api/admin/auth/login", _AuthService_Login0_HTTP_Handler(srv))
 	r.GET("/api/admin/auth/userInfo", _AuthService_GetUserInfo0_HTTP_Handler(srv))
 	r.GET("/api/admin/auth/menu", _AuthService_GetUserMenu0_HTTP_Handler(srv))
 	r.GET("/api/admin/auth/userProfile", _AuthService_GetUserProfile0_HTTP_Handler(srv))
@@ -58,28 +54,6 @@ func RegisterAuthServiceHTTPServer(s *http.Server, srv AuthServiceHTTPServer) {
 	r.POST("/api/admin/auth/send/update/phone", _AuthService_SendUpdatePhoneCode0_HTTP_Handler(srv))
 	r.PUT("/api/admin/auth/update/phone", _AuthService_UpdateUserPhone0_HTTP_Handler(srv))
 	r.PUT("/api/admin/auth/update/pwd", _AuthService_UpdateUserPwd0_HTTP_Handler(srv))
-}
-
-func _AuthService_Login0_HTTP_Handler(srv AuthServiceHTTPServer) func(ctx http.Context) error {
-	return func(ctx http.Context) error {
-		var in LoginRequest
-		if err := ctx.Bind(&in); err != nil {
-			return err
-		}
-		if err := ctx.BindQuery(&in); err != nil {
-			return err
-		}
-		http.SetOperation(ctx, OperationAuthServiceLogin)
-		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.Login(ctx, req.(*LoginRequest))
-		})
-		out, err := h(ctx, &in)
-		if err != nil {
-			return err
-		}
-		reply := out.(*LoginResponse)
-		return ctx.Result(200, reply)
-	}
 }
 
 func _AuthService_GetUserInfo0_HTTP_Handler(srv AuthServiceHTTPServer) func(ctx http.Context) error {
@@ -234,8 +208,6 @@ type AuthServiceHTTPClient interface {
 	GetUserMenu(ctx context.Context, req *emptypb.Empty, opts ...http.CallOption) (rsp *TreeRouteResponse, err error)
 	// GetUserProfile 获取个人中心用户信息
 	GetUserProfile(ctx context.Context, req *emptypb.Empty, opts ...http.CallOption) (rsp *UserProfileForm, err error)
-	// Login 登录
-	Login(ctx context.Context, req *LoginRequest, opts ...http.CallOption) (rsp *LoginResponse, err error)
 	// SendUpdatePhoneCode 发送手机号验证码
 	SendUpdatePhoneCode(ctx context.Context, req *SendUpdatePhoneCodeForm, opts ...http.CallOption) (rsp *emptypb.Empty, err error)
 	// UpdateUserPhone 修改个人中心手机号
@@ -290,20 +262,6 @@ func (c *AuthServiceHTTPClientImpl) GetUserProfile(ctx context.Context, in *empt
 	opts = append(opts, http.Operation(OperationAuthServiceGetUserProfile))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return &out, nil
-}
-
-// Login 登录
-func (c *AuthServiceHTTPClientImpl) Login(ctx context.Context, in *LoginRequest, opts ...http.CallOption) (*LoginResponse, error) {
-	var out LoginResponse
-	pattern := "/api/admin/auth/login"
-	path := binding.EncodeURL(pattern, in, false)
-	opts = append(opts, http.Operation(OperationAuthServiceLogin))
-	opts = append(opts, http.PathTemplate(pattern))
-	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
 	if err != nil {
 		return nil, err
 	}
